docs: atualiza README do projeto